Avoid scrolling if whole content is visible

--- a/app/static/app/css/navbar.css
+++ b/app/static/app/css/navbar.css
@@ -79,14 +79,11 @@ html:has(.subnavbar) {
     mask-repeat: no-repeat;
     -webkit-mask-size: 100% 100%;
     mask-size: 100% 100%;
-
-    display: flex;
 }
 
-.subnavbar .scroll-fade::after {
-    /* Add padding to avoid fade in the last element when scrolling */
-    content: "";
-    flex: 0 0 8px;
+.subnavbar .scroll-fade li:last-child {
+    /* Ensure the last list element remains visible beyond the fade edge */
+    padding-right: 8px;
 }
 
 .offcanvas-header {
